<resources>
    <string name="app_name">ATS app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FibraTelTec</string>
    <string name="nav_header_subtitle">fibrateltec@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Trabajo En Alturas</string>
    <string name="menu_gallery2">Identificacion de peligros potenciales</string>
    <string name="menu_gallery3">Caracterizacion de tareas criticas</string>
    <string name="menu_pdf">Formulario Alturas</string>
    <string name="menu_permiso">Permiso de Trabajo en Alturas</string>
    <string name="menu_permiso2">Permiso de Trabajo en Alturas2</string>
    <string name="menu_permiso3">Permiso de Trabajo en Alturas3</string>
    <string name="menu_pdf4">Formulario Permiso Alturas</string>
    <string name="menu_slideshow">Confinados</string>
    <string name="menu_confinados2">Confinados2</string>
    <string name="menu_confinados3">Confinados3</string>
    <string name="menu_pdf3">Formulario Confinados</string>
    <string name="menu_riesgo">Riesgo Electrico</string>
    <string name="menu_riesgo2">Riesgo Electrico2</string>
    <string name="menu_riesgo3">Riesgo Electrico3</string>
    <string name="menu_riesgo4">Riesgo Electrico4</string>
    <string name="menu_pdf2">Formulario Electrico</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text"></string>
    <string name="menu_vehiculo">Vehiculo</string>
    <string name="menu_vehiculo2">Vehiculo2</string>
    <string-array name="spinners">
        <item>Bueno</item>
        <item>Regular</item>
        <item>Cambio</item>
    </string-array>
    <string-array name="spinners2">
        <item>Si</item>
        <item>No</item>
        <item>N/A</item>
    </string-array>
    <string-array name="tecnicos">
        <item>ARGEMIRO MANUEL ENAMORADO OROZCO</item>
        <item>EDGAR ALBERTO MARTINEZ SALGADO</item>
        <item>NICOLAS ALBERTO QUINTERO PUENTES</item>
        <item>JHON ALEXANDER BARAHONA RUEDAO</item>
        <item>NELSON ORLANDO PARRAGA TOVAR</item>
        <item>YEISON SANCHEZ VAQUIRO</item>
        <item>JEISSON STIVEN ZAMORA ZAMORA</item>
        <item>KEYNER DANIEL DE AVILA ZUÑIGA</item>
        <item>YESID DARIO PETRO MARTINEZ</item>
        <item>CRISTIAN LEONARDO VELASQUEZ NAVARRETE</item>
        <item>ELVER ABELLO POLO</item>
        <item>ALEXIO ROBERTO JULIO BELLIDO</item>
        <item>ALEXANDER RODRIGUEZ</item>
        <item>JHONNATTAN SMITH VELASQUEZ RAMOS</item>
        <item>YOSSY ZAPATA REINA</item>
        <item>IVAN DARIO VALDERRAMA VARGAS</item>
        <item>JIMMY FABIAN VALDERRAMA VARGAS</item>
        <item>WELTHER LEWIS MUSUSU NEMPEQUE</item>
        <item>OSCAR DAVID CAVIEDES GOMEZ</item>
        <item>OSCAR FERNANDO LUNA PEREZ</item>
        <item>DIEGO FERNANDO FARFAN VILLARRAGA</item>
        <item>WILMER GAVIRIA HOLGUIN</item>
        <item>JOSE JAVIER GUTIERREZ PADUA</item>
        <item>ESTEFANIA ANACONA ENCIZO</item>
        <item>JHON FREDY PAYA ROMERO</item>
        <item>YHON MARIO MONTENEGRO BENAVIDES</item>
        <item>YEISON ALBERTO RAMIREZ GOMEZ</item>
        <item>JOSE ALFREDO JIMENEZ SERPA</item>
        <item>LUIS ALEJANDRO CUESTAS CARDENAS</item>
        <item>JUAN ANTONIO RODRIGUEZ RODRIGUEZ</item>
        <item>VICTOR JESUS GOMEZ QUIJADA</item>
        <item>JHONMER MORENO BOLIVAR</item>

    </string-array>
    <string-array name="supervisores">
        <item>OMAR ALFREDO TRIANA ACERO</item>
        <item>DUVAN ANDRES PINILLA QUECAN</item>
        <item>WILLIAM DAVID LÓPEZ MORALES</item>
    </string-array>
    <string-array name="cedulas">
        <item>1030683839</item>
        <item>79584698</item>
        <item>80725496</item>
        <item>79925400</item>
        <item>79790902</item>
        <item>79766091</item>
        <item>1024568027</item>
        <item>1023017584</item>
        <item>1050966967</item>
        <item>1068659291</item>
        <item>1012417803</item>
        <item>1022978895</item>
        <item>80730125</item>
        <item>80472817</item>
        <item>1030580602</item>
        <item>1032402040</item>
        <item>1030548553</item>
        <item>80895950</item>
        <item>80472712</item>
        <item>1013602732</item>
        <item>93450238</item>
        <item>80548737</item>
        <item>1072715628</item>
        <item>79965545</item>
        <item>79448563</item>
        <item>1020752036</item>
        <item>1000694905</item>
        <item>80664855</item>
        <item>79577249</item>
        <item>80757848</item>
        <item>11203921</item>
        <item>2639756</item>
        <item>5071395</item>
        <item>73199359</item>
    </string-array>
    <string-array name="cedula_supervisor">
        <item>1030683839</item>
        <item>1072715628</item>
        <item>1020752036</item>

    </string-array>
    <string-array name="preoperacional_vehiculos">
        <item>Cumple</item>
        <item>No cumple</item>
        <item>No aplica</item>
    </string-array>
    <string-array name="nombre_conductor">
        <item>HUMBERTO DE JESUS MENDEZ ESCOBAR</item>
        <item>JOSE GUSTAVO SARMIENTO DIAZ</item>
        <item>VICTOR ALEXANDER LOPEZ RODRIGUEZ</item>
        <item>WILLIAN ALEJANDRO SANDOVAL PUERTO</item>
        <item>OSCAR IVAN MORALES GUEVARA</item>
        <item>ARGEMIRO MANUEL ENAMORADO OROZCO</item>
        <item>EDGAR ALBERTO MARTINEZ SALGADO</item>
        <item>OSCAR FERNANDO LUNA PEREZ</item>
        <item>JOSE GUSTAVO SARMIENTO DIAZ</item>
        <item>NELSON ORLANDO PARRAGA TOVAR</item>
        <item>JEISSON STIVEN ZAMORA  ZAMORA</item>
        <item>YESID DARIO PETRO MARTINEZ</item>
        <item>ALEXIO ROBERTO JULIO BELLIDO</item>
        <item>ALEXANDER RODRIGUEZ</item>
        <item>YOSSY ZAPATA REINA</item>
        <item>DIEGO FERNANDO FARFAN VILLARRAGA</item>
        <item>WILMER GAVIRIA HOLGUIN</item>
        <item>JOSE JAVIER GUTIERREZ PADUA</item>
        <item>YHON MARIO MONTENEGRO BENAVIDES</item>
        <item>YEISON ALBERTO RAMIREZ GOMEZ</item>
        <item>JOSE ALFREDO JIMENEZ SERPA</item>
        <item>JUAN ANTONIO RODRIGUEZ RODRIGUEZ</item>
        <item>VICTOR JESUS GOMEZ QUIJADA</item>
        <item>SERGIO ANTONIO FAJARDO GARCIA</item>
        <item>LUIS ALEJANDRO CUESTAS CARDENAS</item>
    </string-array>
    <string-array name="cargo">
        <item>Tecnico</item>
        <item>Supervisor</item>
    </string-array>
</resources>